# ULS-Jeu-de-la-vie-de-Conway

./: .gitignore.txt  CMakeLists.txt  main.c  patterns.h
